--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					<div class="contact-form-title">
 						Мы с вами свяжемся
 					</div>
-					<form id="form" class="contacts-form">
+					<form id="form">
 						<input required type="email" name="email" placeholder="Ваша почта">
 						<input required type="tel" name="phone" placeholder="Ваш телефон">
 						<button type="submit">Отправить</button>
